RESOLVED FIXED123555
REGRESSION(r158311): media/media-fragments/TC0054.html and TC0061.html hit assertions
https://bugs.webkit.org/show_bug.cgi?id=123555
Summary REGRESSION(r158311): media/media-fragments/TC0054.html and TC0061.html hit as...
Attachments
Proposed patch (2.34 KB, patch)
2013-11-04 16:37 PST, Eric Carlson
no flags
Updated patch (3.62 KB, patch)
2013-11-04 16:52 PST, Eric Carlson
no flags
Ryosuke Niwa
Comment 1 2013-10-30 22:01:57 PDT
Added test expectations in http://trac.webkit.org/changeset/158344.
Eric Carlson
Comment 2 2013-10-31 08:18:04 PDT
0 WTFCrash + 42 (Assertions.cpp:342) 1 WebCore::MediaFragmentURIParser::parseTimeFragment() + 316 (MediaFragmentURIParser.cpp:172) 2 WebCore::MediaFragmentURIParser::startTime() + 74 (MediaFragmentURIParser.cpp:92) MediaFragmentURIParser.cpp:172 is: ASSERT(fragment.second.is8Bit()); This has been in the code since it was checked in almost two years ago. Why is it asserting now?
Ryosuke Niwa
Comment 3 2013-10-31 10:45:37 PDT
Maybe we're not creating a string in 16-bit mode?
Eric Carlson
Comment 4 2013-11-04 16:37:54 PST
Created attachment 215969 [details] Proposed patch
Ryosuke Niwa
Comment 5 2013-11-04 16:44:08 PST
Could you also removed the test expectation I added in http://trac.webkit.org/changeset/158344 ?
Eric Carlson
Comment 6 2013-11-04 16:52:34 PST
Created attachment 215973 [details] Updated patch
Eric Carlson
Comment 7 2013-11-04 16:52:54 PST
(In reply to comment #5) > Could you also removed the test expectation I added in http://trac.webkit.org/changeset/158344 ? Oops, removed in the updated patch.
Darin Adler
Comment 8 2013-11-04 17:21:03 PST
Comment on attachment 215973 [details] Updated patch View in context: https://bugs.webkit.org/attachment.cgi?id=215973&action=review > Source/WebCore/ChangeLog:12 > + they will not processed. not be processed
WebKit Commit Bot
Comment 9 2013-11-04 17:31:19 PST
Comment on attachment 215973 [details] Updated patch Clearing flags on attachment: 215973 Committed r158624: <http://trac.webkit.org/changeset/158624>
WebKit Commit Bot
Comment 10 2013-11-04 17:31:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.