REGRESSION(r158311): media/media-fragments/TC0054.html and TC0061.html hit assertions https://bugs.webkit.org/show_bug.cgi?id=123555

Reviewed by Darin Adler.

Source/WebCore:

No new tests, covered by existing tests.

* html/MediaFragmentURIParser.cpp:
(WebCore::MediaFragmentURIParser::parseFragments): Don't add a fragment with empty key or value as
    they will not processed.
(WebCore::MediaFragmentURIParser::parseNPTFragment): Remove excess whitespace.

LayoutTests:

* TestExpectations: Remove media/media-fragments/TC0054.html and media/media-fragments/TC0061.html.


Canonical link: https://commits.webkit.org/141958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158624 268f45cc-cd09-0410-ab3c-d52691b4dbfc